Ignore generated flutter artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@ Thumbs.db
 *.bak
 arbol.txt
 PROYECTO_COMPLETO.txt
+
+git rm --cached .flutter-plugins-dependencies
+git rm --cached flutter
+git rm --cached flutter_01.log
+git rm --cached flutter_01.png
