Punto de restauración - pagos/stripe + sesión

--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,40 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"lissen-mvp","appId":"1:512203471020:android:b365fc48323f8eb87b0709","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"lissen-mvp","configurations":{"android":"1:512203471020:android:b365fc48323f8eb87b0709","web":"1:512203471020:web:ae09136ca7a2eacd7b0709"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "lissen-mvp",
+          "appId": "1:512203471020:android:b365fc48323f8eb87b0709",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "lissen-mvp",
+          "configurations": {
+            "android": "1:512203471020:android:b365fc48323f8eb87b0709",
+            "web": "1:512203471020:web:ae09136ca7a2eacd7b0709"
+          }
+        }
+      }
+    }
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default"
+    }
+  ],
+  "hosting": {
+    "public": "public",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      { "source": "/stripe-return", "destination": "/stripe-return.html" },
+      { "source": "/stripe-refresh", "destination": "/stripe-refresh.html" }
+    ]
+  }
+}
