--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    
+  url_launcher: ^6.2.6
 
   cupertino_icons: ^1.0.8
-  video_player: ^2.8.2   
+  video_player: ^2.8.2
 
   # --------------------------
   # Firebase (compatibles entre sí)
@@ -21,6 +21,8 @@ dependencies:
   firebase_core: ^3.6.0
   firebase_auth: ^5.1.4
   cloud_firestore: ^5.4.3
+  cloud_functions: ^5.1.3
+  flutter_stripe: ^11.1.0
   firebase_storage: ^12.4.10
   cached_network_image: ^3.3.1
 
