--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   flutter_stripe: ^11.1.0
   firebase_storage: ^12.4.10
   cached_network_image: ^3.3.1
+  zego_zimkit: ^1.8.2
+  zego_uikit_prebuilt_call: ^4.10.0
 
   # --------------------------
   # Plugins adicionales
