--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   flutter_stripe: ^11.1.0
   firebase_storage: ^12.4.10
   cached_network_image: ^3.3.1
+  zego_zimkit: ^1.19.3
+  zego_uikit_prebuilt_call: ^4.14.3
+  zego_zim: ^2.7.0
 
   # --------------------------
   # Plugins adicionales
