--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,16 @@ dependencies:
   flutter_stripe: ^11.1.0
   firebase_storage: ^12.4.10
   cached_network_image: ^3.3.1
+  zego_zimkit: ^1.19.3
+  zego_uikit_prebuilt_call: ^4.14.3
+  zego_zim: ^2.7.0
+
+dependency_overrides:
+  zego_plugin_adapter: 2.14.2
+  zego_zpns: 2.8.0
+  zego_callkit: 1.0.0+5
+  zego_uikit: 2.28.23
+  zego_express_engine: 3.23.0
 
   # --------------------------
   # Plugins adicionales
