--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,22 +26,17 @@ dependencies:
   firebase_storage: ^12.4.10
   cached_network_image: ^3.3.1
   zego_zimkit: ^1.19.3
-  zego_uikit_prebuilt_call: ^4.14.3
-  zego_zim: ^2.7.0
+  zego_uikit_prebuilt_call: ^4.22.2
+  zego_uikit_signaling_plugin: ^2.8.20
+  zego_zim: ^2.25.0+1
 
-dependency_overrides:
-  zego_plugin_adapter: 2.14.2
-  zego_zpns: 2.8.0
-  zego_callkit: 1.0.0+5
-  zego_uikit: 2.28.23
-  zego_express_engine: 3.23.0
 
   # --------------------------
   # Plugins adicionales
   # --------------------------
   image_picker: ^1.2.1
   geolocator: ^12.0.0
-  just_audio: ^0.9.36
+  just_audio: ^0.10.5
   geocoding: ^3.0.0
   google_maps_flutter: ^2.7.0
 
@@ -64,3 +59,6 @@ flutter:
 
   assets:
     - assets/sounds/offer_request.wav
+
+dependency_overrides:
+  zego_express_engine: 3.22.0
