--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   just_audio: ^0.10.5
   geocoding: ^3.0.0
   google_maps_flutter: ^2.7.0
+  permission_handler: ^12.0.1
 
   # --------------------------
   # 🔵 Login Social
